# zk_evm

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  bibliography.html  compose.yaml  coordinator.Dockerfile  index.html  leader.Dockerfile  optimized-worker.Dockerfile  pgo-worker.Dockerfile  pgo_worker_wrapper.py  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  taplo.toml  test_batching.sh  test_jerigon.sh  test_native.sh  toc.html  toc.js  worker.Dockerfile
common/: Cargo.toml
common/src/: lib.rs
compat/: Cargo.toml
compat/src/: lib.rs
eth_trie_utils/: .gitignore  Cargo.toml  README.md  pyevm_account_ground_truth.txt  rustfmt.toml
eth_trie_utils/examples/: ethereum_trie.rs  hash_nodes.rs  simple.rs
eth_trie_utils/src/: debug_tools.rs  lib.rs  nibbles.rs  partial_trie.rs  query.rs  testing_utils.rs  trie_builder.rs  trie_hashing.rs  trie_ops.rs  trie_subsets.rs  types.rs  utils.rs
eth_trie_utils/src/debug_tools/: common.rs  diff.rs  mod.rs  query.rs  stats.rs
evm_arithmetization/: Cargo.toml  README.md  RevertOpcodeReturn_d5g0v0_Shanghai.json  RevertPrecompiledTouch_nonce_d0g0v0_Shanghai.json  TouchToEmptyAccountRevert_d0g0v0_Shanghai.json  test.json
evm_arithmetization/benches/: fibonacci_25m_gas.rs  stack_manipulation.rs
evm_arithmetization/src/: all_stark.rs  batch_proof.rs  batch_verifier.rs  curve_pairings.rs  example.json  extension_tower.rs  fixed_recursive_verifier.rs  get_challenges.rs  lib.rs  logic.rs  private_public_values.rs  proof.rs  prover.rs  public_types.rs  recursive_verifier.rs  structlog.rs  testing_utils.rs  tries.rs  util.rs  verifier.rs  world.rs
evm_arithmetization/src/arithmetic/: addcy.rs  arithmetic_stark.rs  byte.rs  columns.rs  divmod.rs  mod.rs  modular.rs  mul.rs  shift.rs  utils.rs
evm_arithmetization/src/byte_packing/: byte_packing_stark.rs  columns.rs
evm_arithmetization/src/cpu/: clock.rs  contextops.rs  control_flow.rs  cpu_stark.rs  decode.rs  dup_swap.rs  gas.rs  halt.rs  incr.rs  jumps.rs  mod.rs  stack.rs  syscalls_exceptions.rs
evm_arithmetization/src/generation/: jumpdest.rs  linked_list.rs  mod.rs  mpt.rs  prover_input.rs  rlp.rs  segments.rs  state.rs  test_generation.rs  trie_extractor.rs
evm_arithmetization/src/keccak/: keccak_stark.rs  round_flags.rs
evm_arithmetization/src/keccak_sponge/: columns.rs  keccak_sponge_stark.rs  mod.rs
evm_arithmetization/src/mem_after/: columns.rs  mem_after_stark.rs
evm_arithmetization/src/mem_before/: columns.rs  mem_before_stark.rs  mod.rs
evm_arithmetization/tests/: add11_yml.rs  basic_smart_contract.rs  benchmark_tries.rs  empty_tables.rs  empty_txn_list.rs  erc20.rs  erc20_type2.rs  erc721.rs  global_exit_root.rs  log_opcode.rs  parse.rs  self_balance_gas_cost.rs  selfdestruct.rs  simple_transfer.rs  two_to_one_agg.rs  two_to_one_block.rs  withdrawals.rs
hermez-smt/: Cargo.toml
hermez-smt/src/: lib.rs
mpt_trie/: Cargo.toml  README.md
mpt_trie/examples/: ethereum_trie.rs  hash_nodes.rs  simple.rs
mpt_trie/src/: builder.rs  lib.rs  nibbles.rs  partial_trie.rs  special_query.rs  testing_utils.rs  trie_hashing.rs  trie_ops.rs  trie_subsets.rs  utils.rs
plonky_block_proof_gen/: Cargo.toml  README.md
plonky_block_proof_gen/src/: constants.rs  lib.rs  proof_gen.rs  proof_types.rs  prover_state.rs  types.rs  verifier_state.rs
proc_macro/: Cargo.toml
proc_macro/src/: common.rs  lib.rs
proc_macro/tests/: compiletest.rs
proof_gen/: Cargo.toml  README.md
proof_gen/src/: constants.rs  lib.rs  proof_gen.rs  proof_types.rs  prover_state.rs  types.rs  verifier_state.rs
scripts/: Cargo.toml  benchmark_input.sh  check_proving_time.sh  docker-compose.yml  jerigon_zero_benchmark.bash  jerigon_zero_benchmark.sh  outdated.rs  process.rs  prove_rpc.rs  prove_rpc.sh  prove_stdio.rs  prove_stdio.sh  prove_stdio_docker_compose.sh  runner.rs  test_jerigon.sh  test_native.sh  test_new_chain.sh  xtask.rs
smt_trie/: Cargo.toml  README.md
smt_trie/src/: bits.rs  code.rs  db.rs  keys.rs  lib.rs  smt.rs  smt_test.rs  utils.rs
trace_decoder/: Cargo.toml  README.md
trace_decoder/benches/: block_processing.rs
trace_decoder/examples/: dump.rs  investigate.rs
trace_decoder/src/: aliased_crate_types.rs  code_hash_resolver.rs  core.rs  decoding.rs  decoding_mpt.rs  decoding_smt.rs  decoding_traits.rs  hermez_cdk_erigon.rs  iface.rs  imp.rs  interface.rs  lib.rs  observer.rs  processed_block_trace.rs  processed_block_trace_mpt.rs  processed_block_trace_smt.rs  protocol_processing.rs  trace_protocol.rs  tries.rs  type1.rs  type2.rs  typed_mpt.rs  types.rs  utils.rs  winnow_witness.rs  wire.rs  witness_vectors.jsonc  world.rs  zero_jerigon.rs
trace_decoder/tests/: ab.rs  b19807080_trace.json  b19840104_trace.json  check-subsets.rs  consistent-with-header.rs  diff.rs  robin.rs  simulate-execution.rs  test_b19807080.rs  test_parsing_and_proving.rs  trace_decoder_tests.rs
zero/: Cargo.toml  README.md  build.rs
zero/benches/: intra-block-tries.rs
zero/src/: block_interval.rs  debug_utils.rs  fs.rs  intra_block_tries.rs  lib.rs  ops.rs  parsing.rs  pre_checks.rs  proof_types.rs  prover.rs  provider.rs  trace_decoder.rs  tracing.rs  typed_mpt.rs
zero/src/rpc/: mod.rs  (+3 more)
zero/tests/: consistent-with-header.rs  simulate-execution.rs
zero/tools/: prove_rpc.sh
zero_bin/: .env  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  leader.Dockerfile  version.rs  worker.Dockerfile
zero_bin/.cargo/: config.toml
zero_bin/.github/: CODEOWNERS
zero_bin/common/: Cargo.toml
zero_bin/coordinator/: Cargo.toml  README.md
zero_bin/data/: block_121.json
zero_bin/leader/: Cargo.toml  build.rs
zero_bin/ops/: Cargo.toml
zero_bin/prover/: Cargo.toml
zero_bin/rpc/: Cargo.toml
zero_bin/src/: cli.rs  http.rs  init.rs  main.rs  prover_input.rs  stdio.rs
zero_bin/tools/: debug_block.sh  output.json  prove_blocks.sh  prove_jerigon.sh  prove_rpc.sh  prove_stdio.sh  simple_test.sh  witness.json
zero_bin/verifier/: Cargo.toml
zero_bin/worker/: Cargo.toml  build.rs
(+1668 files in other folders)
