[package]
name = "eth-trie-utils"
description = "Types and utility functions for building/working with partial Ethereum tries."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"

[dependencies]
anyhow = "1.0.64"
bytes = "1.2.1"
ethereum-types = "0.14.0"
hex = "0.4.3"
itertools = "0.10.3"
keccak-hash = "0.10.0"
thiserror = "1.0.36"
log = "0.4.17"
num-traits = "0.2.15"
uint = "0.9.4"
rlp = "0.5.1"
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
eth_trie = "0.1.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rlp-derive = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"