[package]
name = "eth_trie_utils"
description = "Types and utility functions for building/working with partial Ethereum tries."
version = "0.4.1"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mir-protocol/eth-trie-utils"
repository = "https://github.com/mir-protocol/eth-trie-utils"
keywords = ["ethereum", "trie"]
categories = ["cryptography::cryptocurrencies", "data-structures"]

exclude = [
    "test_data/*"
]

[dependencies]
bytes = "1.3.0"
ethereum-types = "0.14.1"
hex = "0.4.3"
keccak-hash = "0.10.0"
thiserror = "1.0.37"
log = "0.4.17"
num-traits = "0.2.15"
uint = "0.9.5"
rlp = "0.5.2"
serde = { version = "1.0.151", features = ["derive", "rc"] }

[dev-dependencies]
eth_trie = "0.1.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rlp-derive = "0.1.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"

[package.metadata.docs.rs]
# Remove "all" once we have an `examples` directory...
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
