[package]
name = "evm_arithmetization"
description = "Implementation of STARKs for the Ethereum Virtual Machine"
version = "0.4.0"
authors = [
  "Daniel Lubarov <daniel@lubarov.com>",
  "William Borgeaud <williamborgeaud@gmail.com>",
]
readme = "README.md"
categories = ["cryptography"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
__compat_primitive_types = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
env_logger = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
itertools = { workspace = true }
keccak-hash = { workspace = true }
log = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
num = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
plonky2 = { workspace = true }
plonky2_util = { workspace = true }
starky = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rlp = { workspace = true }
rlp-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
static_assertions = { workspace = true }
hashbrown = { workspace = true }
tiny-keccak = { workspace = true }
serde_json = { workspace = true }

# Local dependencies
mpt_trie = { workspace = true }
zk_evm_proc_macro = { workspace = true }
alloy.workspace = true

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
ripemd = { workspace = true }

[features]
default = ["parallel"]
#asmtools = ["hex"]
parallel = [
  "plonky2/parallel",
  "plonky2_maybe_rayon/parallel",
  "starky/parallel",
]
polygon_pos = []

[[bin]]
name = "assemble"
required-features = ["asmtools"]

[[bench]]
name = "stack_manipulation"
harness = false

[[bench]]
name = "fibonacci_25m_gas"
harness = false


# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
