[package]
name = "evm_arithmetization"
description = "Implementation of STARKs for the Ethereum Virtual Machine"
version = "0.4.0"
authors = [
  "Daniel Lubarov <daniel@lubarov.com>",
  "William Borgeaud <williamborgeaud@gmail.com>",
]
readme = "README.md"
categories = ["cryptography"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
env_logger.workspace = true
ethereum-types.workspace = true
hashbrown.workspace = true
hex = { workspace = true, optional = true }
hex-literal.workspace = true
itertools.workspace = true
keccak-hash.workspace = true
line-index = "0.1.1"
log.workspace = true
mpt_trie.workspace = true
num.workspace = true
num-bigint.workspace = true
once_cell.workspace = true
pest.workspace = true
pest_derive.workspace = true
plonky2 = { workspace = true, features = ["parallel"] }
plonky2_maybe_rayon = { workspace = true, features = ["parallel"] }
plonky2_util.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rlp.workspace = true
rlp-derive.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-big-array.workspace = true
serde_json.workspace = true
sha2.workspace = true
smt_trie = { workspace = true, optional = true }
starky = { workspace = true, features = ["parallel"] }
static_assertions.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
tokio.workspace = true
tower-lsp = "0.20.0"
tracing.workspace = true
url.workspace = true
zk_evm_common.workspace = true
zk_evm_proc_macro.workspace = true

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
ripemd.workspace = true

[features]
default = ["cdk_erigon"]
asmtools = ["hex"]
polygon_pos = []
cdk_erigon = ["smt_trie"]
eth_mainnet = []

[[bin]]
name = "assemble"
required-features = ["asmtools"]

[[bench]]
name = "stack_manipulation"
harness = false

[[bench]]
name = "fibonacci_25m_gas"
harness = false


# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]


[lints]
workspace = true
