[package]
name = "hermez-smt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives = "0.8.11"
anyhow.workspace = true
bitvec.workspace = true
stackstack = "0.3.0"

[lints]
workspace = true

[dev-dependencies]
derive-quickcheck-arbitrary = "0.1.3"
quickcheck = "1.0.3"
ruint = { workspace = true, features = ["quickcheck"] }
