[package]
name = "mpt_trie"
description = "Types and utility functions for building/working with partial Ethereum tries."
version = "0.3.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = [
    "test_data/*"
]

[dependencies]
bytes = { workspace = true }
enum-as-inner = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true }
keccak-hash = { workspace = true }
parking_lot = { version = "0.12.1", features = ["serde"] }
thiserror = { workspace = true }
log = { workspace = true }
num = { workspace = true, optional = true }
num-traits = "0.2.15"
uint = "0.9.5"
rlp = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
impl-rlp = "0.3.0"
impl-codec = "0.6.0"
impl-serde = "0.4.0"
impl-num-traits = "0.1.2"

[dev-dependencies]
eth_trie = "0.4.0"
pretty_env_logger = "0.5.0"
rand = { workspace = true }
rlp-derive = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["trie_debug"]
trie_debug = ["num"]

[lib]
doc-scrape-examples = true

[[example]]
name = "simple"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
