[package]
name = "mpt_trie"
description = "Types and utility functions for building/working with partial Ethereum tries."
version = "0.4.1"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["test_data/*"]

[dependencies]
bytes = { workspace = true }
enum-as-inner = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true }
keccak-hash = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
uint = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
impl-rlp = { workspace = true }
impl-codec = { workspace = true }
impl-serde = { workspace = true }
impl-num-traits = { workspace = true }

[dev-dependencies]
eth_trie = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rlp-derive = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["trie_debug"]
trie_debug = []

[lib]
doc-scrape-examples = true

[[example]]
name = "simple"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
