[package]
name = "mpt_trie"
description = "Types and utility functions for building/working with partial Ethereum tries."
version = "0.5.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["test_data/*"]

[dependencies]
bytes.workspace = true
enum-as-inner.workspace = true
ethereum-types.workspace = true
hex.workspace = true
impl-codec.workspace = true
impl-num-traits.workspace = true
impl-rlp.workspace = true
impl-serde.workspace = true
keccak-hash.workspace = true
log.workspace = true
num-traits.workspace = true
parking_lot = { workspace = true, features = ["serde"] }
rlp.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
thiserror.workspace = true
uint.workspace = true
zk_evm_common.workspace = true

[dev-dependencies]
eth_trie.workspace = true
pretty_env_logger.workspace = true
rand.workspace = true
rlp-derive.workspace = true
serde_json.workspace = true

[features]
default = ["trie_debug"]
trie_debug = []

[lib]
doc-scrape-examples = true

[[example]]
name = "simple"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true
