[package]
name = "proof_gen"
description = "Generates block proofs from zero proof IR."
version = "0.2.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ethereum-types = { workspace = true }
log = { workspace = true }
paste = "1.0.14"
plonky2 = { workspace = true }
serde = { workspace = true }

# Local dependencies
evm_arithmetization = { version = "0.2.0", path = "../evm_arithmetization" }
