[package]
name = "proof_gen"
description = "Generates block proofs from zero proof IR."
version = "0.2.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
log = { workspace = true }
paste = { workspace = true }
plonky2 = { workspace = true }
serde = { workspace = true }
hashbrown = { workspace = true }

# Local dependencies
evm_arithmetization = { workspace = true }
