[package]
name = "smt_trie"
description = "Types and utility functions for building/working with Polygon Hermez Sparse Merkle Trees."
version = "0.2.0"
authors = ["William Borgeaud <williamborgeaud@gmail.com>"]
readme = "README.md"
categories = ["cryptography"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
alloy.workspace = true
plonky2.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
