[package]
name = "trace_decoder"
description = "Ethereum node witness -> Prover input"
authors = ["Polygon Zero"]
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bitflags = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
copyvec = "0.2.0"
either = { workspace = true }
enum-as-inner = { workspace = true }
ethereum-types = { workspace = true }
evm_arithmetization = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
itertools.workspace = true
keccak-hash = { workspace = true }
log = { workspace = true }
mpt_trie = { workspace = true }
nunny = { workspace = true, features = ["serde"] }
plonky2 = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
smt_trie = { workspace = true }
stackstack = "0.3.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { workspace = true }
u4 = { workspace = true }
winnow = { workspace = true }
zk_evm_common = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
assert2 = "0.3.15"
bstr = { version = "1.10.0", features = ["serde"] }
camino = "1.1.9"
clap.workspace = true
criterion = { workspace = true }
glob = "0.3.1"
non0 = "0.1.0"
plonky2_maybe_rayon = { workspace = true }
pretty_assertions = "1.4.0"
pretty_env_logger = { workspace = true }
prover = { workspace = true }
rstest = "0.21.0"
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }

[[bench]]
name = "block_processing"
harness = false

[[test]]
name = "diff"
harness = false
