[package]
name = "zero"
authors = ["Polygon Zero"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
__compat_primitive_types = { workspace = true }
alloy = { workspace = true }
alloy-compat = "0.1.0"
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
directories = "5.0.1"
dotenvy = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
keccak-hash = { workspace = true }
lru = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
paladin-core = { workspace = true }
plonky2 = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
ruint = { workspace = true, features = ["num-traits", "primitive-types"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true, features = ["retry"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local dependencies
compat = { workspace = true }
evm_arithmetization = { workspace = true }
mpt_trie = { workspace = true }
proof_gen = { workspace = true }
trace_decoder = { workspace = true }
zk_evm_common = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"


[build-dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
vergen-git2 = { version = "1.0.0", features = ["build"] }


[features]
default = ["eth_mainnet"]
eth_mainnet = ["evm_arithmetization/eth_mainnet", "proof_gen/eth_mainnet", "trace_decoder/eth_mainnet"]
cdk_erigon = ["evm_arithmetization/cdk_erigon", "proof_gen/cdk_erigon", "trace_decoder/cdk_erigon"]
polygon_pos = ["evm_arithmetization/polygon_pos", "proof_gen/polygon_pos", "trace_decoder/polygon_pos"]

[lints]
workspace = true
